19/10/2016 - 0.0.1: Generated project, brought in own esLint, changed component structure.