@@ -27,8 +27,9 @@
   "parser": "babel-eslint",
 
   "plugins": [
-    
+    "react"
   ],
+  "extends": ["eslint:recommended", "plugin:react/recommended"],
 
   "rules": {
     "block-scoped-var": 2,
@@ -174,7 +175,7 @@
     "space-infix-ops": 2,
     //"space-return-throw-case": 2,
     "space-unary-ops": [2, { "words": true, "nonwords": false }],
-    "spaced-comment": [2, "always"],
+    "spaced-comment": [1, "always"],
     "strict": 0,
     "use-isnan": 2,
     "valid-jsdoc": 0,
