@@ -1,7 +1,7 @@
 {
   "private": true,
   "version": "0.0.1",
-  "name" : "js-numerals",
+  "name": "js-numerals",
   "description": "Digital Natives test for Dean Vaessen",
   "main": "",
   "scripts": {
@@ -50,12 +50,14 @@
     "karma-webpack": "^1.7.0",
     "minimist": "^1.2.0",
     "mocha": "^3.0.0",
+    "node-sass": "^3.10.1",
     "null-loader": "^0.1.1",
     "open": "0.0.5",
     "phantomjs-prebuilt": "^2.0.0",
     "react-addons-test-utils": "^15.0.0",
     "react-hot-loader": "^1.2.9",
     "rimraf": "^2.4.3",
+    "sass-loader": "^4.0.2",
     "style-loader": "^0.13.0",
     "url-loader": "^0.5.6",
     "webpack": "^1.12.0",
@@ -63,6 +65,7 @@
   },
   "dependencies": {
     "core-js": "^2.0.0",
+    "formous": "^0.8.8",
     "normalize.css": "^4.0.0",
     "react": "^15.0.0",
     "react-dom": "^15.0.0"
