@@ -1,4 +1,17 @@
-/* Base Application Styles */
+/*******************************
+ * [_FormComponent.scss]
+ * Define the form styling here
+ ******************************/
+
+/**
+ * Dependencies
+ */
+
+	//foo
+
+ /**
+  * Styles
+  */
 body {
   color: #fff;
   background: #222;
