@@ -1,8 +1,7 @@
-/*eslint-disable */
 import 'core-js/fn/object/assign';
 import React from 'react';
 import ReactDOM from 'react-dom';
-import App from './components/Main';
+import App from './components/root/app';
 
 // Render the main component into the dom
 ReactDOM.render(<App />, document.getElementById('app'));
