@@ -1,0 +1,16 @@
+/* ==========================================================================
+   Variables
+   ========================================================================== */
+
+
+// Structure
+
+// Text Selection
+$selectionColor: orange;
+
+// Colors
+$red: purple;
+$blue: purple;
+
+
+
